infra/k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gateway
spec:
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: 8000
    - name: admin
      port: 8001
      targetPort: 8001
    - name: admin-ui
      port: 8002
      targetPort: 8002

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: kong/kong-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
            - containerPort: 8001
            - containerPort: 8002
          resources:
            limits:
              memory: "2048Mi"
              cpu: "2000m"
            requests:
              memory: "1024Mi"
              cpu: "1000m"
          volumeMounts:
            - name: kong-declarative-config
              mountPath: /kong/declarative
      volumes:
        - name: kong-declarative-config
          configMap:
            name: gateway-configmap
