infra/k8s/ui-react.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  labels:
    app: ui
spec:
  selector:
    app: ui
  ports:
  - port: 3000
    targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-react-deployment
  labels:
    app: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui-react
        image: docker.io/library/ui-react:0.0.0
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
        ports:
        - containerPort: 3000
